tests/syntax/good/136_class_param.grace
class foo(x) {
    def y = x
}
