tests/syntax/bad/146_interp_brace_unbalanced_error.grace
"abc{if (true) then {"def"}ghi"
